Fix list style for <p/>-wrapped items
Yep, it's correct Markdown -> HTML output, check [1] for more info.

[1]: https://github.com/waylan/Python-Markdown/issues/450

--- a/themes/whatif/static/css/content.css
+++ b/themes/whatif/static/css/content.css
@@ -224,6 +224,10 @@ p {
 .page p {
 	text-indent: 1.5em;
 }
+.page li > p {
+	text-indent: 0;
+	margin-bottom: 0;
+}
 .refbody > span.p {
 	display: block;
 	line-height: normal;
